--- a/hello world.html
+++ b/hello world.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello World!</h1>
     <p>Selamat datang di halaman HTML pertama saya.</p>
+    <p>Semoga anda senang</p>
 </body>
 </html>
